# BC-AppliedAnalyticsProject

./: .replit  README.md  pyproject.toml  replit.md
data/processed/: final_monitoring_plan.csv  game_predictor_2026_first_round_predictions.csv  matchupDiff.csv  matchupDiff_week5_features.csv  week11_bias_metrics_after.csv  week11_bias_metrics_before.csv  week11_model_comparison_week10_vs_bias_mitigated.csv  week11_permutation_importance.csv  week11_sample_predictions.csv  week11_xgb_feature_importance.csv  week12_baseline_data.csv  week12_monitoring_plan.csv  week12_recent_data.csv  week6_top3_models.csv  week7_top3_rf_models.csv  week8_all_model_results.csv  week8_family_summary.csv  week8_top3_models.csv  week9_all_model_results.csv  week9_bias_variance_data.csv  week9_family_summary.csv  week9_winning_model_metrics.csv
models/: logreg_week6_best.pkl  rf_week7_best.pkl  week8_best_model.pkl  week9_best_model.pkl
notebooks/: 01DataCleaning.ipynb  02DataSplit.ipynb  03EDA.ipynb  GamePredictor2026.ipynb  Week10DataAugmenting.ipynb  Week10DataCentricIteration.ipynb  Week11ModelExplainability.ipynb  Week12.ipynb  Week2DataSplit.ipynb  Week4PreprocessingValidation.ipynb  Week5Features.ipynb  Week6LogisticReg.ipynb  Week7RandomForest.ipynb  Week8AdvancedModels.ipynb  Week9WinningModel.ipynb
notebooks/.ipynb_checkpoints/: 03EDA-checkpoint.ipynb  MarchMadness_Final-checkpoint.ipynb
scripts/: build_final_notebook.py
